Completed an acorns 1099-B generator

--- a/Pipfile
+++ b/Pipfile
@@ -4,10 +4,8 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-"pdfminer.six" = "*"
-pdfrw = "*"
-pypdf2 = "*"
 pypdf = "*"
+python-dotenv = "*"
 
 [dev-packages]
 
